- 1.1.11 - forbidden parameter names are now capitalized to avoid breaking generated ts validity.